fix: adjust ad background color in dark mode

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2491,7 +2491,7 @@ button.c-share__btn {
   line-height: 1.35;
   overflow: hidden;
   border-radius: 4px;
-  background-color: #fafafa;
+  background-color: var(--body-background-color);
   box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.1); }
 
 .jumbotron #carbonads {
