--- a/src/assets/scss/_carbon-ads.scss
+++ b/src/assets/scss/_carbon-ads.scss
@@ -12,7 +12,7 @@
     line-height: 1.35;
     overflow: hidden;
     border-radius: 4px;
-    background-color: hsl(0, 0%, 98%);
+    background-color: var(--body-background-color);
     box-shadow: 0 1px 4px 1px hsla(0, 0%, 0%, 0.1);
 }
 
